--- a/styleSheets/guideStyles.css
+++ b/styleSheets/guideStyles.css
@@ -41,6 +41,8 @@
     position: fixed;
     z-index: 100;
 
+    top: 0;
+    left: 0;
     border-radius: 0px;
     border-width: 0px;
     border-color: none;
@@ -175,7 +177,7 @@ video {
 .pdf {
     display: block;
     margin: 10px auto;
-    width: 60vw;
+    width: 100%;
     height: 25vw;
     max-width: 800px; 
 
